# datalad-core

./: .appveyor.yml  .changelog.md.j2  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  conftest.py  pyproject.toml
.github/workflows/: conventional-commits.yml  mypy-pr.yml  mypy-project.yml  ruff.yml
datalad_core/: __init__.py
datalad_core/commands/: __init__.py  dataset.py  decorator.py  default_result_handler.py  exceptions.py  param_constraint.py  preproc.py  result_handler.py
datalad_core/commands/tests/: test_cmd.py  test_dataset.py  test_preproc.py
datalad_core/config/: __init__.py  defaults.py  git.py  gitenv.py  item.py  manager.py  utils.py
datalad_core/config/tests/: test_defaults.py  test_git.py  test_gitenv.py  test_manager.py  test_utils.py
datalad_core/constraints/: __init__.py  basic.py  constraint.py  exceptions.py  path.py  wrapper.py
datalad_core/constraints/tests/: test_basic.py  test_constraint.py  test_exceptions.py  test_path.py  test_wrapper.py
datalad_core/consts/: __init__.py
datalad_core/iter_collections/: __init__.py  gitdiff.py  gitstatus.py  gittree.py  gitworktree.py  utils.py
datalad_core/iter_collections/tests/: test_itergitdiff.py  test_itergitstatus.py  test_itergittree.py  test_itergitworktree.py
datalad_core/repo/: __init__.py  annex.py  flyweight.py  gitmanaged.py  repo.py  tree_item.py  utils.py  worktree.py  worktree_item.py
datalad_core/repo/tests/: test_annex.py  test_repo.py  test_tree_item.py  test_worktree.py  test_worktree_item.py
datalad_core/runners/: __init__.py  annex.py  git.py  imports.py
datalad_core/runners/tests/: test_callannex.py  test_callgit.py
datalad_core/tests/: __init__.py  fixtures.py  test_dummy.py  test_fixtures.py  test_utils.py  utils.py
docs/: Makefile  conf.py  index.rst
docs/_templates/autosummary/: class.rst
docs/patterns/: dataset_paths.rst
